RG-1067 fix alert close button vertical alignment
Former-commit-id: 148bb160319ba676b4f32c318af26e8fbc13659e

--- a/components/alert/alert.scss
+++ b/components/alert/alert.scss
@@ -80,9 +80,10 @@
 
   margin: $ring-unit/2;
   padding: $ring-unit;
-  line-height: normal;
 
-  border: 0;
+  border: none;
+  font-size: 0;
+  line-height: 0;
   background: transparent;
   cursor: pointer;
 
